# mjpeg-encoder

./: .build-pi.sh  .build.sh  .gitignore  CMakeLists.txt  README.md  cl_ping_pong.cpp  main.cpp  mjpeg_encoder
core/: AVIOutputStream.cpp  AVIOutputStream.h  JPEGEncoder.cpp  JPEGEncoder.h  Utils.cpp  Utils.h
core/encoder/: AbstractMJPEGEncoder.cpp  AbstractMJPEGEncoder.h  MJPEGEncoderOpenCLImpl.cpp  MJPEGEncoderOpenCLImpl.h  MJPEGEncoderOpenMPImpl.cpp  MJPEGEncoderOpenMPImpl.h  MJPEGEncoderSerialImpl.cpp  MJPEGEncoderSerialImpl.h
hook/: hook-amd-opencl.c  hook-nvidia-opencl.c
io/: RawVideoReader.cpp  RawVideoReader.h
model/: Color.cpp  Color.h  Model.cpp  Model.h  Size.cpp  Size.h
opencl-kernel/: jpeg-encoder.cl
pi/: opencl-pi.cl  opencl-pi.cpp  pi  pi.cpp  shishua.h
script/: get_cl_result.py  get_openmp_result.py  get_time.py  get_time_ffmjpeg.py  script.py  script_cl.py  script_ffmjpeg.py  script_serial.py
